--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "url": "https://github.com/antvis/L7"
   },
   "devDependencies": {
+    "@ali/rollup-plugin-string": "^3.0.0",
     "@antv/g2": "^3.5.9",
     "@antv/gatsby-theme-antv": "^0.10.59",
     "@babel/cli": "^7.6.4",
     "@babel/core": "^7.6.4",
     "@babel/plugin-proposal-decorators": "^7.6.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
+    "@babel/plugin-transform-object-assign": "^7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
     "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@babel/plugin-syntax-async-generators": "^7.7.4",
@@ -104,6 +106,9 @@
     "rollup-plugin-terser": "^5.1.2",
     "rollup-plugin-typescript": "^1.0.1",
     "rollup-pluginutils": "^2.8.2",
+    "rollup-plugin-inject": "^3.0.1",
+    "rollup-plugin-modify": "^3.0.0",
+    "rollup-plugin-commonjs": "^9.3.4",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.0.0",
     "styled-components": "^3.4.6",
@@ -136,6 +141,7 @@
     "lint:fix": "prettier --write docs/api/**/*.md docs/api/*.md  stories/**/**/*.tsx  *.md",
     "lint:examples": "eslint examples --fix --ext .js",
     "prebuild": "run-p tsc lint",
+    "miniprogram": "cross-env BABEL_ENV=bundle node_modules/.bin/rollup -c ./build/rollup.config.bak.js --environment BUILD:production,MINIFY:false",
     "build": "yarn clean && lerna run build",
     "postbuild": "yarn build:declarations",
     "build:declarations": "lerna exec --stream --no-bail 'tsc --project ./tsconfig.build.json'",
